# csv2athena_schema

./: .flake8  LICENSE  README.rst  csv2athena_schema.py  pyproject.toml  requirements.txt  setup.py  test_csv2athena_schema.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
example/: answer_elb_logs.sql  elb_logs.csv  elb_logs.sql
scripts/: csv2athena_schema.py  try-messy.py
