[tool.poetry]
name = "csv2athena_schema"
version = "0.1.0"
description = ""
authors = ["Yukihiro Okada <yuokada@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
messytables = "^0.15.2"
Jinja2 = ">=2.10,<3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
